syntax = "proto3";

package authevents.v1;

import "user/v1/user.proto";

enum AuthCUDEventType {
    AUTH_CUD_EVENT_TYPE_UNSPECIFIED = 0;
    AUTH_CUD_EVENT_TYPE_CREATE = 1;
    AUTH_CUD_EVENT_TYPE_UPDATE = 2;
    AUTH_CUD_EVENT_TYPE_DELETE = 3;
}

message AuthEvent {
    AuthCUDEventType event_type = 1;
    user.v1.UserWithID user = 2;
    int64 timestamp = 3;
}
